Fixed center align of the .wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,9 @@ body {
   top: 50%;
   left: 50%;
   width: 460px;
-  height: 460px;
-  margin-left: -200px;
-  margin-top: -230px;
+  height: 520px;
+  margin-left: -230px;
+  margin-top: -260px;
 }
 
 .logo {
